# RatVantage

./: .cursorignore  .geminiignore  .gitignore  AGENTS.md  BRAND.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md
.claude/: settings.json
.codex/: config.toml
.cursor/rules/: ratvantage.mdc
.github/PULL_REQUEST_TEMPLATE/: hardware-compatibility.md
.github/workflows/: ci.yml
crates/legion-common/: Cargo.toml
crates/legion-common/src/: lib.rs
crates/legion-daemon/: Cargo.toml
crates/legion-daemon/src/: lib.rs  main.rs
crates/legion-daemon/tests/: dbus_contract.rs
crates/legion-probe/: Cargo.toml
crates/legion-probe/src/: lib.rs  main.rs  power_profiles.rs
crates/legion-tray/: Cargo.toml
crates/legion-tray/src/: desktop_detection.rs  lib.rs  main.rs  menu.rs  status_icon.rs  status_notifier.rs
crates/legion-tray/tests/: tray_status.rs
crates/legion-ui/: Cargo.toml
crates/legion-ui/src/: display_refresh.rs  gtk_shell.rs  lib.rs  main.rs  style.css
crates/legion-ui/src/ui/: appearance.rs  automations.rs  battery.rs  diagnostics.rs  fans.rs  gpu.rs  mod.rs  profiles.rs  settings.rs  shared.rs  status.rs
crates/legion-ui/tests/: dbus_client.rs  gtk_shell.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs
data/dbus/: org.ratvantage.LegionControl1.conf  org.ratvantage.LegionControl1.service
data/desktop/: org.ratvantage.LegionControl.Tray.desktop  org.ratvantage.LegionControl.desktop
data/metainfo/: org.ratvantage.LegionControl.metainfo.xml
data/polkit/: org.ratvantage.LegionControl1.policy
data/presets/: README.md  balanced-daily.toml  gaming.toml  max-safe.toml  quiet-office.toml
data/systemd/: legion-control-daemon.service
data/validation/: 82wm-live-evidence-requirements.tsv
docs/: architecture.md  automation-engine-plan.md  driver-surface-audit-82wm-2026-05-30.md  driver-surface-read-write-gui-plan-82wm.md  ec-reverse-engineering.md  fan-gpu-execution-policy.md  feature-roadmap.md  fedora-packaging.md  fixture-capture.md  gtk-smoke-testing.md  hardware-compatibility-intake-plan.md  hardware-control-matrix.md  implementation-plan.md  lenovo-legion-toolkit-parity-audit.md  live-validation-evidence-runbook.md  live-write-validation.md  release-checklist.md  release-packaging-inventory.md  research-summary.md  safety-model.md  session-handoff-archive.md  session-handoff.md  statusnotifier-smoke-testing.md  vantage-toolkit-parity-test-first-plan.md  write-contracts.md
packaging/rpm/: legion-control.spec
prompts/: codex-build-kickoff.md
scripts/: acpi-call-patch-and-build.sh  archive-validation-bundle.sh  audit-public-release.sh  capture-compat-report.sh  capture-compatibility-bundle.sh  capture-dbus-contract.sh  capture-gpu-mux-evidence.sh  capture-gtk-smoke-report.sh  capture-keyboard-rgb-evidence.sh  capture-keyboard-rgb-openrgb-bridge-evidence.sh  capture-keyboard-rgb-openrgb-sdk-evidence.sh  capture-keyboard-rgb-openrgb-sdk-write-evidence.sh  capture-sysfs-fixture.sh  capture-write-validation-report.sh  check-keyboard-rgb-openrgb.sh  ci-local.sh  compare-keyboard-rgb-evidence.sh  dev-daemon-args.sh  ec-explore-install-tools.sh  ec-explore-phase1.sh  ec-explore-phase2-wmi.sh  ec-explore-phase3-analyze.sh  finish-root-install.sh  install-dev-deps-fedora.sh  install-dev-passwordless-updater.sh  install-dev-polkit-local-user-rule.sh  install-dev-system-integration.sh  install-dev-systemd-ratvantage.sh  install-user-session.sh  openrgb-keyboard-rgb-sdk-helper.sh  openrgb-sdk-server-session.sh  qa-gui.sh  restart-ratvantage.sh  review-gpu-mux-evidence.sh  review-keyboard-rgb-openrgb-bridge-evidence.sh  review-write-validation-bundle.sh  run-local-session-app.sh  setup-keyboard-rgb-openrgb-access.sh  smoke-install-staged.sh  smoke-statusnotifier-tray.sh  (+25 more)
tests/fixtures/dbus/: ratvantage-daemon.xml
tests/fixtures/semantic-ui/: expected.json
tests/fixtures/sysfs-82wm-confirmed/sys/class/dmi/id/: product_sku
tests/fixtures/sysfs-82wm-confirmed/sys/class/hwmon/hwmon7/: fan1_label  name  temp1_label
tests/fixtures/sysfs-82wm-confirmed/sys/class/power_supply/BAT0/: charge_types  energy_full  energy_now  manufacturer  model_name  power_now
tests/fixtures/sysfs-82wm-confirmed/sys/firmware/acpi/: platform_profile_choices
tests/fixtures/sysfs-82wm-runtime-capture/: fixture-manifest.txt
tests/fixtures/sysfs-82wm-runtime-capture/sys/class/dmi/id/: product_name  product_version
tests/fixtures/sysfs-82wm-runtime-capture/sys/class/hwmon/hwmon0/: name
tests/fixtures/sysfs-82wm-runtime-capture/sys/class/hwmon/hwmon10/: name
tests/fixtures/sysfs-82wm-runtime-capture/sys/class/hwmon/hwmon6/: name
tests/fixtures/sysfs-82wm-runtime-capture/sys/firmware/acpi/: platform_profile_choices
tests/ui/: capture_semantic_ui.py  capture_tab_screenshots.py  check_qa_artifacts.py  compare_screenshots.py  compare_semantic_ui.py  dump_widget_tree.py  ratvantage_gui_qa.py  test_gtk_accessibility.py  test_semantic_diff_classifier.py  write_qa_summary.py
(+16 files in other folders)
