[workspace]
members = [
    "crates/legion-common",
    "crates/legion-probe",
    "crates/legion-daemon",
    "crates/legion-ui",
    "crates/legion-tray",
    "crates/test-support",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/daredoole/RatVantage"

[workspace.dependencies]
anyhow = "1.0.103"
clap = { version = "4", features = ["derive"] }
legion-common = { path = "crates/legion-common" }
legion-probe = { path = "crates/legion-probe" }
legion-control-ui = { path = "crates/legion-ui" }
ratvantage-test-support = { path = "crates/test-support" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
zbus = { version = "5", features = ["blocking"] }
