[package]
name = "legion-control-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
legion-common.workspace = true
legion-probe.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
zbus.workspace = true

[dev-dependencies]
ratvantage-test-support.workspace = true
