[package]
name = "legion-control-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
legion-common.workspace = true
serde.workspace = true
serde_json.workspace = true
zbus.workspace = true

[dev-dependencies]
legion-control-daemon = { path = "../legion-daemon" }
legion-probe.workspace = true
ratvantage-test-support.workspace = true
