[package]
name = "legion-control-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
adw = { package = "libadwaita", version = "0.9.1", optional = true }
anyhow.workspace = true
clap.workspace = true
gtk4 = { version = "0.11.2", optional = true }
legion-common.workspace = true
serde.workspace = true
serde_json.workspace = true
zbus.workspace = true

[features]
default = []
gtk-ui = ["dep:adw", "dep:gtk4"]

[dev-dependencies]
legion-control-daemon = { path = "../legion-daemon" }
legion-probe.workspace = true
ratvantage-test-support.workspace = true
